<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:columnCount="4"
        android:padding="16dp"
        android:background="@color/gray"
        tools:context=".view.MainActivity">

    <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:padding="12dp"
            android:gravity="end"
            app:layout_columnSpan="4"
            android:textSize="@dimen/resultSize"
            android:textColor="@color/black"
            android:background="@color/white"/>

    <Button
            android:id="@+id/button_reset"
            app:layout_columnWeight="2"
            android:layout_width="0dp"
            app:layout_columnSpan="2"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_reset"/>

    <Button
            android:id="@+id/button_change_sign"
            app:layout_columnWeight="2"
            android:layout_width="0dp"
            app:layout_columnSpan="2"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_change_sign"/>

    <Button
            android:id="@+id/button_seven"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_seven"/>

    <Button
            android:id="@+id/button_eight"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_eight"/>

    <Button
            android:id="@+id/button_nine"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_nine"/>


    <Button
            android:id="@+id/button_plus"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_plus"/>

    <Button
            android:id="@+id/button_four"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_four"/>

    <Button
            android:id="@+id/button_five"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_five"/>

    <Button
            android:id="@+id/button_six"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_six"/>

    <Button
            android:id="@+id/button_minus"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_minus"/>

    <Button
            android:id="@+id/button_one"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_one"/>

    <Button
            android:id="@+id/button_two"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_two"/>

    <Button
            android:id="@+id/button_three"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_three"/>

    <Button
            android:id="@+id/button_multiplication"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_multiplication"/>

    <Button
            android:id="@+id/button_zero"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_zero"/>

    <Button
            android:id="@+id/button_point"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_point"/>

    <Button
            android:id="@+id/button_equally"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_equally"/>

    <Button
            android:id="@+id/button_division"
            app:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_rowWeight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonTextSize"
            android:text="@string/button_division"/>

</android.support.v7.widget.GridLayout>